--- a/dr_sounds/app/src/main/res/layout/activity_main.xml
+++ b/dr_sounds/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitLogin"
+    tools:context=".DoctorInitLogin"
     android:background="@color/background">
 
 
@@ -28,20 +28,6 @@
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="@+id/Username"
         app:layout_constraintTop_toBottomOf="@+id/Username" />
-
-    <TextView
-        android:id="@+id/checker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="119dp"
-        android:layout_marginEnd="10dp"
-        android:text="yooooooo"
-        android:textColor="#ff0000"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/Username"
-        app:layout_constraintStart_toStartOf="@+id/Password"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
