--- a/dr_sounds/app/src/main/res/layout/add_family.xml
+++ b/dr_sounds/app/src/main/res/layout/add_family.xml
@@ -4,27 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitLogin"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:context=".DoctorInitLogin">
 
     <Button
         android:id="@+id/button"
         android:layout_width="164dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="106dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="67dp"
         android:text="Add User"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/add_sound" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="142dp"
-        android:layout_height="40dp"
+        android:layout_height="0dp"
         android:layout_marginStart="22dp"
-        android:layout_marginTop="91dp"
-        android:layout_marginBottom="43dp"
+        android:layout_marginTop="102dp"
+        android:layout_marginBottom="55dp"
         android:text="Add User"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -34,25 +34,35 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="184dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="31dp"
+        android:layout_width="147dp"
+        android:layout_height="125dp"
+        android:layout_marginBottom="63dp"
         android:src="@drawable/familyavatar"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <TextView
+    <EditText
         android:id="@+id/textView2"
         android:layout_width="227dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="125dp"
-        android:text="Robert"
+        android:layout_height="0dp"
+        android:layout_marginBottom="47dp"
+        android:hint="Enter name here"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/add_sound"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+    <Button
+        android:id="@+id/add_sound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="71dp"
+        android:text="Add Sound"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
