--- a/dr_sounds/app/src/main/res/layout/user_selection.xml
+++ b/dr_sounds/app/src/main/res/layout/user_selection.xml
@@ -12,6 +12,7 @@
         android:layout_width="156dp"
         android:layout_height="156dp"
         android:layout_marginStart="24dp"
+        android:onClick="currentuser"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
